# addons

movilmedica/: .pre-commit-config.yaml  apt.sh  pyproject.toml  requirements.txt
movilmedica/account_financial_report/report/: abstract_report_xlsx.py  aged_partner_balance.py  aged_partner_balance_xlsx.py  general_ledger.py  general_ledger_xlsx.py  journal_ledger.py  journal_ledger_xlsx.py  open_items.py  open_items_xlsx.py  trial_balance.py  trial_balance_xlsx.py  vat_report.py  vat_report_xlsx.py
movilmedica/account_financial_report/tests/: test_general_ledger.py  test_journal_ledger.py  test_trial_balance.py  test_vat_report.py
movilmedica/account_financial_report/wizard/: general_ledger_wizard.py  journal_ledger_wizard.py  trial_balance_wizard.py  vat_report_wizard.py
movilmedica/account_ips/: __manifest__.py
movilmedica/account_ips/controllers/: controllers.py
movilmedica/account_ips/i18n/: es_CO.po
movilmedica/account_ips/models/: account_move.py  account_move_line.py  res_company.py
movilmedica/account_ips/reports/: account_move_reports.xml  (+1 more)
movilmedica/account_payment_odone/: __init__.py  __manifest__.py  hooks.py
movilmedica/account_tax_balance/: hooks.py
movilmedica/cie_rips/: __manifest__.py
movilmedica/clinic_history/: __manifest__.py
movilmedica/custom_fields/: __manifest__.py
movilmedica/customer_contract/: __manifest__.py
movilmedica/hr_contract_users/: __manifest__.py
movilmedica/industry_fsm_movilmedica/: __manifest__.py
movilmedica/l10n_co_edi_odone/: __init__.py  __manifest__.py  requirements.txt
movilmedica/l10n_co_res_partner/: README.md  __init__.py  __manifest__.py
movilmedica/movilmedica/: README.rst  __manifest__.py
movilmedica/od_journal_sequence/: __manifest__.py
movilmedica/web_responsive_extended/: __manifest__.py
(+278 files in other folders)
